--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Base Level Extension",
   "version": "1.0",
   "action": {
-    "default_popup": "hello.html",
+    "default_popup": "WebstormProjects/aiForm/index.html",
     "default_icon": "hello_extensions.png"
   },
-  "host_permissions": ["https://yahooshop.azurewebsites.net/api"]
+  "host_permissions": ["https://"]
 }
